--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,29 @@
         <div class="bounce3"></div>
       </div>
     </div>
+
+    <div class="widget-social">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 mb-30-xs mb-30-sm">
+            <div class="widget-social-icon pull-right text-right pull-none-xs">
+              <a href="https://www.facebook.com/sveviacivil">
+                <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
+              </a>
+              <a href="#">
+                <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
+              </a>
+              <a
+                href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
+              >
+                <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <header id="navbar-spy" class="full-header header-3 style-2">
       <nav id="primary-menu" class="navbar navbar-fixed-top">
         <div class="row">
@@ -554,106 +577,6 @@
     </section>
     <!-- #hero end -->
 
-    <!-- Service Block #4
-============================================= -->
-    <section class="service service-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="row">
-              <!-- Service Block #1 -->
-              <div class="col-xs-12 col-sm-4 col-md-4 service-block">
-                <div class="service-img">
-                  <img src="assets/images/services/grid/1.jpg" alt="icons" />
-                </div>
-                <div class="service-icon">
-                  <img
-                    src="assets/images/services/icons/i48/1w.png"
-                    alt="icon"
-                  />
-                  <img
-                    src="assets/images/services/icons/i48/1w.png"
-                    alt="icon"
-                  />
-                </div>
-                <div class="service-content">
-                  <div class="service-desc">
-                    <h4>Tiling &amp; Painting</h4>
-                    <p>
-                      Tiling is an effective way to add elegance & style to any
-                      bath or kitchen. Svevia Remodeling specializes in tile
-                      installation and works directly with each homeowner.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- .col-md-4 end -->
-
-              <!-- Service Block #2 -->
-              <div class="col-xs-12 col-sm-4 col-md-4 service-block">
-                <div class="service-img">
-                  <img src="assets/images/services/grid/2.jpg" alt="icons" />
-                </div>
-                <div class="service-icon">
-                  <img
-                    src="assets/images/services/icons/i48/2w.png"
-                    alt="icon"
-                  />
-                  <img
-                    src="assets/images/services/icons/i48/2w.png"
-                    alt="icon"
-                  />
-                </div>
-                <div class="service-content">
-                  <div class="service-desc">
-                    <h4>Renovations</h4>
-                    <p>
-                      Svevia has full service renovation expertise, we are
-                      equipped with the right tools and people to handle
-                      projects of all sizes & provide high quality renovation
-                      works.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- .col-md-4 end -->
-
-              <!-- Service Block #3 -->
-              <div class="col-xs-12 col-sm-4 col-md-4 service-block">
-                <div class="service-img">
-                  <img src="assets/images/services/grid/3.jpg" alt="icons" />
-                </div>
-                <div class="service-icon">
-                  <img
-                    src="assets/images/services/icons/i48/3w.png"
-                    alt="icon"
-                  />
-                  <img
-                    src="assets/images/services/icons/i48/3w.png"
-                    alt="icon"
-                  />
-                </div>
-                <div class="service-content">
-                  <div class="service-desc">
-                    <h4>Design &amp; Build</h4>
-                    <p>
-                      Svevia aim to eliminate the task of dividing your project
-                      between different architecture and construction company as
-                      we offers design and build services for you.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- .col-md-4 end -->
-            </div>
-          </div>
-          <!-- .col-md-12 end -->
-        </div>
-        <!-- .row end -->
-      </div>
-      <!-- .container end -->
-    </section>
-
     <!-- Projects Section
 ============================================= -->
     <section
@@ -673,22 +596,26 @@
           </div>
           <!-- .col-md-6 end -->
         </div>
+        <!-- .row end -->
 
-        <a
-          data-flickr-embed="true"
-          href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
-          title="Svevia Civil"
-          ><img
-            src="https://live.staticflickr.com/65535/50310048662_054dcb2537_c.jpg"
-            width="1024"
-            height="768"
-            alt="Svevia Civil"
-        /></a>
-        <script
-          async
-          src="//embedr.flickr.com/assets/client-code.js"
-          charset="utf-8"
-        ></script>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <a
+              data-flickr-embed="true"
+              href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
+              title="Svevia Civil"
+              ><img
+                src="https://live.staticflickr.com/65535/50310048662_054dcb2537_c.jpg"
+                width="100%"
+                alt="Svevia Civil"
+            /></a>
+            <script
+              async
+              src="//embedr.flickr.com/assets/client-code.js"
+              charset="utf-8"
+            ></script>
+          </div>
+        </div>
 
         <!-- .row end -->
       </div>
