--- a/public/testimonials.html
+++ b/public/testimonials.html
@@ -50,6 +50,29 @@
         <div class="bounce3"></div>
       </div>
     </div>
+
+    <div class="widget-social">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 mb-30-xs mb-30-sm">
+            <div class="widget-social-icon pull-right text-right pull-none-xs">
+              <a href="https://www.facebook.com/sveviacivil">
+                <i class="fa fa-facebook"></i><i class="fa fa-facebook"></i>
+              </a>
+              <a href="#">
+                <i class="fa fa-pinterest"></i><i class="fa fa-pinterest"></i>
+              </a>
+              <a
+                href="https://www.flickr.com/photos/190068746@N07/albums/72157716095932922"
+              >
+                <i class="fa fa-flickr"></i><i class="fa fa-flickr"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <header id="navbar-spy" class="full-header header-3 style-2">
       <nav id="primary-menu" class="navbar navbar-fixed-top">
         <div class="row">
